background on .correct and .incorrect to improve visibility

--- a/styles.css
+++ b/styles.css
@@ -63,17 +63,16 @@ body {
 }
 
 .correct {
-  border: 2px solid rgb(50, 205, 50);
+  background-color: rgb(50, 205, 50);
 }
 
 .incorrect {
-  border: 2px solid rgb(220, 20, 60);
+  background-color: rgb(220, 20, 60);
 }
 
 .correct,
 .incorrect {
   color: rgb(255, 255, 255);
-  background-color: rgb(0, 0, 0);
 }
 
 .btn:hover {
